# game-of-life

./: .gitignore  .mergify.yml  .versio.yaml  CHANGELOG.md  Cargo.toml  Dockerfile.bins  Dockerfile.container  Makefile  README.md  build.rs  nfpm.yaml
.github/workflows/: autofmt.yml  build-releases.yml  quickstart.yml  release.yml  test-and-tag.yml  test.yml  tests.yml  update-tap.yml
game-of-life-x86_64-apple-darwin/: game-of-life
game-of-life-x86_64-unknown-linux-gnu/: game-of-life
homebrew/: formula.rb.j2
src/: main.rs
