[package]
name = "game-of-life"
version = "1.53.33"
authors = [ "Billie Thompson <billie+game-of-life@billiecodes.com>" ]
edition = "2018"
description = "An implementation of the game of life."
license = "Creative Commons Zero v1.0 Universal"
repository = "https://github.com/PurpleBooth/game-of-life/"
readme = "README.md"
keywords = [ "life", "game", "kata" ]
categories = [ "command-line-utilities", "games", "visualization" ]

[dependencies]
crossterm = "0.19.0"
rand = "0.8.3"
clap = "2.33.3"
retry = "1.2.0"
