[package]
name = "game-of-life"
version = "1.53.65"
authors = [ "Billie Thompson <billie+game-of-life@billiecodes.com>" ]
edition = "2018"
description = "An implementation of the game of life."
license = "Creative Commons Zero v1.0 Universal"
repository = "https://github.com/PurpleBooth/game-of-life/"
readme = "README.md"
keywords = [ "life", "game", "kata" ]
categories = [ "command-line-utilities", "games", "visualization" ]

[dependencies]
crossterm = "0.23.2"
rand = "0.8.5"
clap = { version = "3.2.5", features = ["derive", "cargo", "wrap_help", "yaml", "env", "unicode" ] }
retry = "1.3.1"
